Fix fan messages bg too zoomed in on small screens

--- a/src/app/views/pages/letters/letters.component.scss
+++ b/src/app/views/pages/letters/letters.component.scss
@@ -7,6 +7,13 @@
   z-index:-1;
 }
 
+@media (max-width:1300px) { // to maintain smaller bg for small screens
+  .bg-video.dynamic-1 {
+      height: 100%;
+      min-height: unset;
+  }
+}
+
 .stars-section {
   position: absolute;
   top: 50px;
